--- a/index.html
+++ b/index.html
@@ -57,62 +57,9 @@
             </div><!-- gnb end -->
 
             <div id="contents">
-                <div class="stampTopBack">
-                    <div class="stampCheckWrap">
-                        <p class="title">매장 이용 후 스탬프를 모아<br /><b>경품을 받아요!</b></p>
-                        <div class="stampGroup">
-                            <!-- [전달사항] 스탬프를 얻었다면 클래스 on 추가 -->
-                            <button type="button" onclick="popupOpen('#GetStampPopup');" class="on">스탬프 얻기</button>
-                            <button type="button" onclick="popupOpen('#GetStampPopup');" class="on">스탬프 얻기</button>
-                            <button type="button" onclick="popupOpen('#GetStampPopup');">스탬프 얻기</button>
-                            <button type="button" onclick="popupOpen('#GetStampPopup');">스탬프 얻기</button>
-                        </div>
-                        <p class="text">스탬프 4개를 받아서 이벤트 부스로 오시면 <b>경품 제공!</b></p>
-                        <!-- 
-                            [전달사항] 스탬프 4종 모두 획득시 경품수령확인 버튼이 보여집니다. 
-                            .show 추가시 block
-                        -->
-                        <button type="button" class="btnGet show" onclick="popupOpen('#GetProductPopup');">경품 수령 확인</button>
-                    </div>
-                </div><!-- stampTopBack end -->
-                <div class="stampFront">
-                    <div class="stampWrap">
-                        <div class="titleSm"><p>스탬프 투어 이벤트</p></div>
-                        <p class="titleLg"><img src="assets/images/text_eventinfo_black.svg" alt="이벤트 정보"></p>
-                        <div class="stampInfo">
-                            <ul>
-                                <li>
-                                    <img src="assets/images/icon_event_method.svg" alt="참여방법 아이콘">
-                                    <strong>참여방법</strong>
-                                    <p>매장 이용 후 카운터<br />직원에게 스탬프를 보여주세요</p>
-                                </li>
-                                <li>
-                                    <img src="assets/images/icon_event_rule.svg" alt="규칙 아이콘">
-                                    <strong>규칙</strong>
-                                    <p>제휴 매장 4곳 이용 후 스탬프를<br />받아서, 이벤트 부스로 오시면<br />경품을 제공 해 드립니다.</p>
-                                </li>
-                            </ul>
-                        </div>
-                        <ul class="dotList mb50">
-                            <li>매일 선착순 20명에게 제공됩니다.</li>
-                            <li>경품은 아래 장소에서 수령하실 수 있습니다.</li>
-                        </ul>
-                        <div class="titleSm"><p>스탬프 경품</p></div>
-                        <p class="titleLg"><img src="assets/images/text_productinfo_black.svg" alt="경품 안내"></p>
-                        <!-- [전달사항] 경품 변경예정 -->
-                        <ul class="stampProduct">
-                            <li>
-                                <p class="img"><img src="assets/images/img_stampProduct01.jpg" alt="휴대용 선풍기 이미지"></p>
-                                <p class="text"><span>휴대용 선풍기</span></p>
-                            </li>
-                            <li>
-                                <p class="img"><img src="assets/images/img_stampProduct02.jpg" alt="쿨링 타월 이미지"></p>
-                                <p class="text"><span>쿨링 타월</span></p>
-                            </li>
-                        </ul>
-                    </div><!-- stampWrap end -->
+                <div class="mapTopBack">
                     <div class="mapWrap">
-                        <div id="map" style="width: 100%;height: 290px;"></div>
+                        <div id="map" style="width: 100%;height: 500px;"></div>
                         <button type="button" class="btnMyPosition" onclick="gps_tracking();">내위치</button>
                         <div class="zoomControl">
                             <button type="button" onclick="zoomIn();"><img src="assets/images/icon_plus.svg" alt="확대"></button>
@@ -233,30 +180,64 @@
                             }
                         </script>
                     </div>
-                </div><!-- stampFront end -->
+                </div><!-- mapTopBack end -->
+                <div class="mapFront">
+                    <div class="rouletterWrap">
+                        <div class="ta_c"><img src="assets/images/tit_roulette.svg" alt="우리동네 멤버쉽 한강대로편 행운룰렛 이벤트"></div>
+                        <div class="rouletterArea">
+                            <div class="rouletterImg">
+                                <!-- [전달사항] 이미지 변경예정 -->
+                                <div class="rouletterEl"><img src="assets/images/img_rouletterEl.png" alt="룰렛이미지"></div>
+                            </div>
+                            <div class="rouletterPin"></div>
+                            <button class="btnRouletter">START</button>
+                        </div>
+                        <div class="rouletterInfo">
+                            <div class="titleSm"><p><img src="assets/images/icon_star.svg" alt="" class="mr05">기회는 <span>단 1번!</span></p></div>
+                            <p class="titleLg"><img src="assets/images/text_eventinfo_purple.svg" alt="이벤트 안내"></p>
+                            <p class="textMd">룰렛을 돌려서 <br /><span>화살표가 멈춘 영역의 경품</span>을 드립니다.</p>
+                            <ul>
+                                <li>
+                                    <img src="assets/images/icon_event_purplemap.svg" alt="장소 아이콘">
+                                    <strong>장소</strong>
+                                    <p>이벤트 부스</p>
+                                </li>
+                                <li>
+                                    <img src="assets/images/icon_event_purpletime.svg" alt="시간 아이콘">
+                                    <strong>시간</strong>
+                                    <p>11:30~13:30<br>17:30~19:00</p>
+                                </li>
+                                <li>
+                                    <img src="assets/images/icon_event_purpletarget.svg" alt="참여대상 아이콘">
+                                    <strong>참여대상</strong>
+                                    <p>LG U+모바일을<br>이용하는 모든 고객</p>
+                                </li>
+                            </ul>
+                        </div><!-- rouletterInfo end -->
+                        <div class="rouletterSlideWrap">
+                            <div class="titleSm"><p>룰렛 이벤트</p></div>
+                            <p class="titleLg"><img src="assets/images/text_productinfo_purple.svg" alt="경품 안내"></p>
+                            <div class="rouletterSlideGroup">
+                                <div class="rouletterArrow">
+                                    <button type="button" class="prev">Prev</button>
+                                    <button type="button" class="next">Next</button>
+                                </div>
+                                <!-- [전달사항] 이미지 변경예정 -->
+                                <div class="rouletterSlide">
+                                    <div class="slideItem">
+                                        <img src="assets/images/img_rouletter_product01.png" alt="카카오 스티커 이미지">
+                                        <p><span>카카오 스티커</span></p>
+                                    </div>
+                                    <div class="slideItem">
+                                        <img src="assets/images/img_rouletter_product01.png" alt="휴대용 선풍기 이미지">
+                                        <p><span>휴대용 선풍기</span></p>
+                                    </div>
+                                </div>
+                            </div><!-- rouletterSlideGroup end -->
+                        </div><!-- rouletterSlideWrap end -->
+                    </div><!-- rouletterWrap end -->
+                </div><!-- mapFront end -->
             </div><!-- contents end -->
-
-            <div class="popupWrap" id="GetProductPopup">
-                <div class="popupInner">
-                    <h5>스탬프 투어 이벤트</h5>
-                    <p>경품 수령 시 클릭하는 버튼입니다.<br />이용자께서는 취소를 클릭해주세요.</p>
-                    <div class="popupBtnGroup">
-                        <button type="button" class="btnPopupClose" onclick="popupClose('#GetProductPopup');">취소</button>
-                        <button type="button" class="btnPopupCheck">확인</button>
-                    </div>
-                </div><!-- popupInner end -->
-            </div><!-- popupWrap end -->
-
-            <div class="popupWrap" id="GetStampPopup">
-                <div class="popupInner">
-                    <h5>스탬프 투어 이벤트</h5>
-                    <div class="input"><input type="password" title="인증번호 입력" placeholder="인증번호를 입력해주세요."></div>
-                    <div class="popupBtnGroup">
-                        <button type="button" class="btnPopupClose" onclick="popupClose('#GetStampPopup');">취소</button>
-                        <button type="button" class="btnPopupCheck">확인</button>
-                    </div>
-                </div><!-- popupInner end -->
-            </div><!-- popupWrap end -->
             
             <footer>
                 <div class="footerTop">
