--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <div class="rouletterArea">
                             <div class="rouletterImg">
                                 <!-- [전달사항] 이미지 변경예정 -->
-                                <div class="rouletterEl"><img src="assets/images/img_rouletterEl.png" alt="룰렛이미지"></div>
+                                <div class="rouletterEl"><img src="assets/images/img_rouletterEl.svg" alt="룰렛이미지"></div>
                             </div>
                             <div class="rouletterPin"></div>
                             <button class="btnRouletter">START</button>
